@@ -9,6 +9,7 @@
 
 #include "accidental-placement.hh"
 
+#include "rhythmic-head.hh"
 #include "accidental-interface.hh"
 #include "music.hh"
 #include "note-collision.hh"
@@ -340,6 +341,15 @@ Accidental_placement::calc_positioning_done (SCM smob)
   Accidental_placement_entry *head_ape = new Accidental_placement_entry;
   common[X_AXIS] = common_refpoint_of_array (heads, common[X_AXIS], X_AXIS);
   vector<Skyline_entry> head_skyline (empty_skyline (LEFT));
+
+  vector<Grob *> stems;
+  for (vsize i = 0; i < heads.size  (); i++)
+    if (Grob *s = Rhythmic_head::get_stem (heads[i]))
+      stems.push_back (s);
+  vector_sort (stems, less<Grob*> ());
+  uniq (stems);
+  concat (heads, stems);
+  
   vector<Box> head_extents;
   for (vsize i = heads.size (); i--;)
     {
